--- a/Imgr_clone/templates/base.html
+++ b/Imgr_clone/templates/base.html
@@ -13,6 +13,12 @@
   <div class="container">
     <ul class="nav navbar-nav">
 
+    <li><a href="{% url 'index_view' %}"><button type="button" class="btn btn-default navbar-btn">Home</button></a></li>
+    <li><a href="{% url 'image_list_view' %}"><button type="button" class="btn btn-default navbar-btn">Add Image</button></a></li>
+    <li><a href="{% url 'image_create_view' %}"><button type="button" class="btn btn-default navbar-btn">Add Image</button></a></li>
+    <li><a href="{% url 'image_update_view' %}"><button type="button" class="btn btn-default navbar-btn">Add Image</button></a></li>
+
+
         {% if not request.user.is_authenticated %}
     <li><a href="{% url 'login' %}"><button type="button" class="btn btn-default navbar-btn">Log In</button></a></li>
         {% else %}
