--- a/Imgr_clone/templates/image_gallery/image_list.html
+++ b/Imgr_clone/templates/image_gallery/image_list.html
@@ -6,18 +6,19 @@
 <hr>
 
 <div class=>
-  <a href="{% url 'image_update_view' image.id %}">
+  <a href="{% url 'image_detail_view' image.id %}">
 <img src="{{ MEDIA_URL }}{{ image.image_url }}" alt="Picture of {{ image.title }}"/>
 </a>
 </div>
 
 
+  <a href="{% url 'image_update_view' image.id %}">Update</a>
+
+
 <div class="">
-  {{ image.title }}
+  <h3 style="font-weight: bold;">{{ image.title }}</h3>
 </div>
-<div class="">
-  {{ image.description }}
-</div>
+
 <hr>
 {% endfor %}
 {% endblock %}
